--- a/hiding.tex
+++ b/hiding.tex
@@ -8,9 +8,9 @@ the most frequent components to focus our analysis on these components.
 %Let us remark that this probability is affected by the dependencies and restrictions of
 %the feature.
 %
-In order to compute the probability of a set of features we are going
-to \emph{hide} other features. We hide features because it is usually not feasible to compute all the
-products of the software product line. However, we expect to achieve our goal if we restrict ourselves to a subset of features. So,
+In order to compute the probability of a set of features, other features from the software product line are 
+\emph{hidden}. We hide features because it is usually not feasible to compute all the
+products of the software product line. However, we expect to achieve our goal if we restrict ourselves to a subset of features. Thus,
 non interesting features are transformed into a new feature,
 denoted by $\bot\not\in\calF$, and we consider the set $\calFbot =
 \calF\cup\{\bot\}$.
