--- a/operational.tex
+++ b/operational.tex
@@ -105,7 +105,7 @@ Rule $\nombreRegla{con3}$ requires that both branches agree on the
 termination of a product.
 %
 
-We use \emph{multisets} of transitions to consider different occurrences of the same transition. So, if a transition can be derived in several ways, then each derivation generates a different
+We use \emph{multisets} of transitions to consider different occurrences of the same transition. Thus, if a transition can be derived in several ways, then each derivation generates a different
 instance of this transition~\cite{h96}. For example, let us consider the
 term
 $P=\feature{A};\checkmark \choice_{\frac12} \feature{A};\checkmark$. If we were not careful, then we would have
