--- a/related_work.tex
+++ b/related_work.tex
@@ -1,6 +1,6 @@
 % $Id: introduction.tex,v 1.8 2013/12/03 09:17:27 ccamacho Exp $
 \section{Related work}
-\label{ref:related-work}
+\label{ref:related_work}
 
 
 
