--- a/consistency.tex
+++ b/consistency.tex
@@ -24,7 +24,7 @@ Next we prove an important property of our language: its consistency. We say tha
   \end{displaymath}
 \edfn
 
-The proof of the following result is straightforward by taking into account that our operational semantics rules are the same, if we discard probabilities, as in~\cite{acl13}. Therefore, any sequence of transitions
+The proof of the following result is straightforward by taking into account that, if we discard probabilities, our operational semantics rules are the same as in~\cite{acl13}. Therefore, any sequence of transitions
 derived in the probabilistic model can be also derived in the non
 probabilistic one. In addition, by
 Lemma~\ref{lem:sum:prob}  we know that any derived trace in the
