--- a/equivalence.tex
+++ b/equivalence.tex
@@ -19,6 +19,10 @@ better in any moment. The proof of the following result is an immediate conseque
   \prodp(\exclude{A}{B}{P})&=&\semdenp{\exclude{A}{B}{\cdot}}(\prodp(P))
 \end{array}$$
 \eprop
+The definition of the operator \(\semdenp{\cdot\paral\cdot}\) is
+clearly associative and commutative. Then, as consequence of the
+previous proposition, the semantics of the
+conjunction operator $\paral$ is associative and commutative.
 
 Finally, we have the previously announced result. The proof, by structural induction on $P$, is easy from
 Proposition~\ref{prop:DenoOpe}.
